--- a/index.html
+++ b/index.html
@@ -7,28 +7,7 @@
 		<link rel="stylesheet" href="node_modules/todomvc-app-css/index.css">
 	</head>
 	<body>
-		<section class="todoapp">
-			<header class="header">
-				<h1>todos</h1>
-				<input class="new-todo" placeholder="What needs to be done?" autofocus>
-			</header>
-
-			<section class="main">
-				<input class="toggle-all" type="checkbox">
-				<label for="toggle-all">Mark all as complete</label>
-				<ul class="todo-list"></ul>
-			</section>
-
-			<footer class="footer">
-				<span class="todo-count"></span>
-				<ul class="filters">
-					<li><a href="#/" class="selected">All</a></li>
-					<li><a href="#/active">Active</a></li>
-					<li><a href="#/completed">Completed</a></li>
-				</ul>
-				<button class="clear-completed">Clear completed</button>
-			</footer>
-		</section>
+		<section class="todoapp"></section>
 
 		<footer class="info">
 			<p>Double-click to edit a todo</p>
@@ -37,16 +16,6 @@
 			<p>Part of <a href="http://todomvc.com">TodoMVC</a></p>
 		</footer>
 
-
-        <script src="node_modules/systemjs/dist/system.js"></script>
-        <script>
-            // set our baseURL reference path
-            System.config({
-                baseURL: '/dist'
-            });
-
-            // loads /dist/main.js
-            System.import('main.js');
-        </script>
+        <script src="dist/main.js"></script>
 	</body>
 </html>
